# aipassports

./: .dockerignore  .gitignore  Dockerfile  INTEGRATION_TEST_README.md  LICENSE  Plan.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  smoke-test.js  test-live.js  test_team_integration.sh
.ai/: GEMINI.md
.github/workflows/: ci.yml
agent/: .gitignore  Cargo.toml  Dockerfile  agent.toml  docker-compose.yml
agent/src/: capability.rs  key_derivation.rs  main.rs  skill_executor.rs  team_key_manager.rs  team_key_manager_tests.rs  vault_reader.rs  vault_writer.rs  zdr_firewall.rs
backend/: Cargo.toml
backend/src/: lib.rs  team_tests.rs  vault.rs  vault_tests.rs  zdr_firewall.rs
docs/: ARCH.md  CAPABILITY_BINDING.md  DCAP_INTEGRATION.md  DEPLOYMENT.md  FIREWALL.md  FRONTEND_SPEC.md  IDENTITY.md  NEAR.md  PRODUCT_SPEC.md  ROADMAP_AUTH_TO_ZK.md  SYNC.md  WALRUS.md  simplified_arch.md
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: _headers
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: gateway.ts  mcpClient.ts  nearRpc.ts  pointers.ts  types.ts
frontend/src/hooks/: useSkillExecutor.ts  useSkills.ts  useWiki.ts
frontend/src/near/: wallet.ts
frontend/src/utils/: sanitizeError.ts
gateway/: package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
gateway/src/: capability.test.ts  capability.ts  dispatcher.ts  index.test.ts  index.ts  schema.sql  team_handlers.ts  tools.ts  types.ts
infra/: confidential-deployment.json  generate-policy.sh
src/: main.js
src/Application/Constants/: BuiltinTools.js
src/Application/Ports/: ICryptoEngine.js  IIdentityVerifier.js  IOutboundProxy.js  ISyncProvider.js  IVaultRepository.js
src/Application/Services/: SkillExecutor.js  SyncService.js
src/Application/UseCases/: ExecuteToolUseCase.js  SyncVaultUseCase.js
src/Domain/Aggregates/: Vault.js
src/Domain/Entities/: Skill.js  WikiPage.js
src/Domain/ValueObjects/: ComplianceRegistry.js  Credential.js  EncryptedBlob.js
src/Infrastructure/Crypto/: AESGCMEngine.js  JwtAssertionVerifier.js  KeyDerivation.js  WebAuthnVerifier.js
tests/: debounce-validation.js  firewall-audit.js  smoke-test.js
(+26 files in other folders)
