[package]
name = "shade-agent"
version = "0.1.0"
edition = "2021"
authors = ["Antigravity"]
description = "IronClaw Shade Agent - Confidential TEE Compute service for key derivation and secure skill execution."

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = "0.7.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
aes-gcm = "0.10.3"
hkdf = "0.12.4"
sha2 = "0.10.8"
rand = "0.8.5"
hex = "0.4.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5.2", features = ["cors"] }
thiserror = "1.0.61"
