[package]
name = "shade-agent"
version = "0.1.0"
edition = "2021"
authors = ["Antigravity"]
description = "IronClaw Shade Agent - Confidential TEE Compute service for key derivation and secure skill execution."

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = "0.7.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
aes-gcm = "0.10.3"
hkdf = "0.12.4"
sha2 = "0.10.8"
rand = "0.8.5"
hex = "0.4.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5.2", features = ["cors", "limit"] }
tower = { version = "0.4", features = ["util"] }
thiserror = "1.0.61"
# C-01: Timing-safe byte comparison via subtle (replaces constant_time_eq)
# subtle provides a proper constant-time ConstantTimeEq that doesn't leak length
subtle = "2"
# C-03: Unicode NFKC normalization for ZDR keyword scanner
unicode-normalization = "0.1"
# C-02: URL parsing for ZDR destination host/scheme validation
url = "2"
# N-06: Zeroize secrets from memory after use
zeroize = { version = "1", features = ["derive"] }
