[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=5.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-normalization = "0.1"

[dev-dependencies]
near-sdk = { version = "=5.6.0", features = ["unit-testing"] }
